crates/ruma-common/tests/api/ui/07-error-type-attribute.stderr
error: unexpected token
  --> $DIR/07-error-type-attribute.rs:17:5
   |
17 |     #[derive(Default)]
   |     ^
